# ConcertUserProfiling

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
attendee_profiling/: config.py  constants.py  description_clusters.py  distances_calculations.py  graph_communities.py  graphs_creation.py  hdbscan_experiment.py  kmedoids_experiment.py  utils.py  utils_models.py
envs/: skmob_updated_h3.yml  skmob_updated_h3pandas.yml  sknetwork_updated.yml
notebooks/analysis/: 09-bipartite-community-detection.ipynb  10-cluster-assignments-comparison.ipynb  11-statistical-inference-clusters.ipynb  9-bipartite-community-detection.ipynb
notebooks/preprocessing/: 0-preprocessing-timetables.ipynb  00-preprocessing-timetables.ipynb  01-preprocessing-fix-polygons-h3pandas.ipynb  04-preprocessing-trajectories.ipynb  1-preprocessing-fix-polygons-h3pandas.ipynb  2-preprocessing-dataset-reduction.ipynb  4-preprocessing-trajectories.ipynb  5-preprocessing-associate-trajs-events-filtered.ipynb  6-preprocessing-associate-trajs-events-compressed.ipynb
