[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "attendee_profiling"
version = "0.0.1"
description = "Data Science MSc thesis"
authors = [
  { name = "Camilo Betancourt Nieto" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.9.19"


[tool.ruff]
line-length = 99
src = ["attendee_profiling"]
include = ["pyproject.toml", "attendee_profiling/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["attendee_profiling"]
force-sort-within-sections = true

